# mlops-prac

./: Makefile  README.md  projectflow.txt
.dvc/: config
docs/: mkdocs.yml
mlops-prac/: pyproject.toml
mlops-prac/docs/docs/: index.md
mlops-prac/mlops_prac/: __init__.py  plots.py
mlops_prac/: dataset.py  features.py
mlops_prac/modeling/: predict.py  train.py
src/logger/: __init__.py
