[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_prac"
version = "0.0.1"
description = "mlops practice project"
authors = [
  { name = "Neeraj" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mlops_prac"]
include = ["pyproject.toml", "mlops_prac/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_prac"]
force-sort-within-sections = true

